--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.24.0"
+    "sequelize": "^6.24.0",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
