--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.24.0",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
